deploy/kubernetes/bot.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: halp-bot-deployment
  labels:
    app: halp-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: halp-bot
  template:
    metadata:
      labels:
        app: halp-bot
    spec:
      containers:
      - name: halp-bot
        image: xtellurian/halp-bot:71
        ports:
        - containerPort: 80
