deploy/kubernetes/halp-bot-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: halp-bot-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - halp.australiaeast.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: halp.australiaeast.cloudapp.azure.com
    http:
      paths:
      - path: /bot
        backend:
          serviceName: halp-bot-service
          servicePort: 80
